--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,12 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'org.seleniumhq.selenium:selenium-java:3.0.1'
+}
 
+test {
+    maxParallelForks = 10
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
