--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testСompile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.12.0'
     testCompile 'org.seleniumhq.selenium:selenium-java:3.0.1'
+
+
 }
 
 test {
