--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testСompile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.12.0'
-    testCompile 'org.seleniumhq.selenium:selenium-java:3.0.1'
+    compile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.12.0'
+    compile 'org.seleniumhq.selenium:selenium-java:3.0.1'
 
 
 }
